--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,5 +3,5 @@ uvicorn[standard]==0.32.1
 pyserial==3.5
 pydantic==2.10.4
 python-multipart==0.0.20
-passlib[bcrypt]==1.7.4
+bcrypt==5.0.0
 python-jose[cryptography]==3.3.0
